--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- <h1>Hi WP2 KCG Students</h1> -->
 </head>
 <body>
-    Class Lecture 03 
+    <H2>Class Lecture 03 </H2>
 </body>
 
 <script src="classWork1.js"></script>
